--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .purple-btn {
+        @apply text-white bg-purple-500 p-1 cursor-pointer rounded-lg;
+    }
+}
